--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "sulejmank",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint": "^4.18.1",
     "express": "^4.16.2",
     "joi": "^13.1.2",
