api/purchase route

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "joi": "^13.1.2",
     "mysql2": "^1.5.2",
     "nodemon": "^1.15.1",
+    "querystring": "^0.2.0",
+    "request": "^2.84.0",
     "sequelize": "^4.34.1"
   }
 }
