--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "eslint": "^4.18.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "form-data": "^2.3.2",
     "helmet": "^3.12.0",
     "joi": "^13.1.2",
+    "multer": "^1.3.0",
     "mysql2": "^1.5.2",
     "nodemon": "^1.15.1",
     "querystring": "^0.2.0",
