--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "cookie-parser": "^1.4.3",
     "eslint": "^4.18.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
