--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "lint": "eslint **/*.js"
+    "lint": "eslint **/*.js",
+    "start-session-debug": "DEBUG=express-session nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,18 +18,33 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
+    "docxtemplater": "^3.6.6",
+    "dotenv": "^6.0.0",
     "eslint": "^4.18.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "form-data": "^2.3.2",
+    "fs": "0.0.1-security",
+    "googleapis": "^27.0.0",
     "helmet": "^3.12.0",
+    "https": "^1.0.0",
     "joi": "^13.1.2",
+    "jszip": "^2.6.1",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "mysql2": "^1.5.2",
     "nodemon": "^1.15.1",
+    "query-string": "^6.1.0",
     "querystring": "^0.2.0",
     "request": "^2.84.0",
-    "sequelize": "^4.34.1"
+    "sequelize": "^4.34.1",
+    "sequelize-session-store": "^0.1.0",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "^1.13.2",
+    "session-file-store": "^1.2.0",
+    "sessionstore": "^1.3.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
